--- a/index.html
+++ b/index.html
@@ -207,18 +207,18 @@
   </div>
   <a href="#exhibition">Exhibition</a>
   <a href="#statement">Statement</a>
-  <a href="#cv">CV</a>
-  <a href="#contact">Contact</a>
+  <a href="./cv.html">CV</a>
+  <a href="./contact.html">Contact</a>
 </div>
 <div class="gallery" id="gallery"></div>
 <div class="social-icons">
-  <a href="mailto:artist@example.com" title="Email">
+  <a href="mailto:wenqinfan1@gmail.com" title="Email">
     <img src="./icons/mail.png" alt="Email" />
   </a>
-  <a href="https://instagram.com/artist" target="_blank" title="Instagram">
+  <a href="https://www.instagram.com/wenqin_fan/" target="_blank" title="Instagram">
     <img src="./icons/instagram.png" alt="Instagram" />
   </a>
-  <a href="https://www.redbook.com/artist" target="_blank" title="Redbook">
+  <a href="https://www.xiaohongshu.com/user/profile/62f9dd66000000001200cbf4?xsec_token=YBBd8lHkgGCuy82D63yHZByaM__VkLL2sR7-kmMaoQMkc=&xsec_source=app_share&xhsshare=WeixinSession&appuid=62f9dd66000000001200cbf4&apptime=1752122474&share_id=16227bccfb444d28baad3c6e26987774" target="_blank" title="Redbook">
     <img src="./icons/redbook.png" alt="Redbook" />
   </a>
 </div>
