--- a/painting.html
+++ b/painting.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Artist Name</title>
+  <title>Wenqin Fan</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -70,7 +70,6 @@
     .sidebar .sub-menu {
       margin-left: 20px;
       display: none;
-      transition: opacity 0.3s ease;
     }
 
     .sidebar .sub-menu a {
@@ -108,6 +107,7 @@
       background-color: #0056b3;
       transform: scale(1.05);
     }
+
     .gallery {
       display: flex;
       flex-direction: column;
@@ -115,6 +115,7 @@
       gap: 15px;
       margin: 20px;
     }
+
     .gallery-item {
       display: flex;
       flex-direction: column;
@@ -127,30 +128,34 @@
       border: 1px solid #ddd;
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.8s ease;
       opacity: 0;
-      transform: translateY(20px);
+      transform: translateY(30px) scale(0.95);
+      transition:
+              transform 1.2s cubic-bezier(0.23, 1, 0.32, 1),
+              box-shadow 0.3s ease,
+              opacity 1.5s ease;
     }
+
     .gallery-item img {
       max-width: 100%;
       height: auto;
       border-radius: 8px;
     }
+
     .gallery-item h3 {
       margin: 10px 0 5px;
       font-size: 18px;
     }
+
     .gallery-item p {
       margin: 5px 0;
       font-size: 14px;
       color: #555;
     }
+
     .gallery-item.show {
       opacity: 1;
-      transform: translateY(0);
-    }
-    .gallery-item.hidden {
-      display: none;
+      transform: translateY(0) scale(1);
     }
   </style>
 </head>
@@ -158,16 +163,9 @@
 <h1 id="artist-title">Wenqin Fan</h1>
 <div class="menu-icon" onclick="openSidebar()">☰</div>
 <div class="sidebar" id="sidebar">
-  <a href="javascript:void(0)" class="close-btn" onclick="closeSidebar()"
-  >&times;</a
-  >
+  <a href="javascript:void(0)" class="close-btn" onclick="closeSidebar()">&times;</a>
   <a href="./index.html">Home</a>
-  <a
-          href="javascript:void(0)"
-          class="expandable"
-          onclick="toggleArtSubMenu()"
-  >Art</a
-  >
+  <a href="javascript:void(0)" class="expandable" onclick="toggleArtSubMenu()">Art</a>
   <div class="sub-menu" id="art-submenu">
     <a href="./painting.html">Painting</a>
     <a href="./install.html">Install</a>
@@ -175,14 +173,16 @@
   </div>
   <a href="#exhibition">Exhibition</a>
   <a href="#statement">Statement</a>
-  <a href="#cv">CV</a>
-  <a href="#contact">Contact</a>
+  <a href="./cv.html">CV</a>
+  <a href="./contact.html">Contact</a>
 </div>
+
 <div class="categories">
   <button onclick="filterGallery('featured')">Featured</button>
   <button onclick="filterGallery('-2024')">-2024</button>
   <button onclick="filterGallery('2023')">2023</button>
 </div>
+
 <div class="gallery" id="gallery"></div>
 <div id="sentinel" style="height: 1px"></div>
 
@@ -197,8 +197,7 @@
 
   function toggleArtSubMenu() {
     const subMenu = document.getElementById("art-submenu");
-    subMenu.style.display =
-            subMenu.style.display === "block" ? "none" : "block";
+    subMenu.style.display = subMenu.style.display === "block" ? "none" : "block";
   }
 
   const jsonUrl = "./artwork.json";
@@ -207,6 +206,8 @@
   const itemsPerPage = 2;
   let loading = false;
   let allImagesLoaded = true;
+  let currentCategory = null;
+  const validCategories = ["featured", "-2024", "2023"];
 
   function renderImages() {
     if (loading || !allImagesLoaded) return;
@@ -214,10 +215,19 @@
     allImagesLoaded = false;
 
     const gallery = document.getElementById("gallery");
-    const slice = galleryData.slice(
-            currentIndex,
-            currentIndex + itemsPerPage
-    );
+
+    const filteredData = galleryData.filter(image => {
+      const lowerCats = image.categories.map(c => c.toLowerCase());
+      if (currentCategory) {
+        return lowerCats.includes(currentCategory);
+      } else {
+        return lowerCats.some(cat => validCategories.includes(cat));
+      }
+    });
+
+    if (currentIndex >= filteredData.length) return;
+
+    const slice = filteredData.slice(currentIndex, currentIndex + itemsPerPage);
     let imagesToLoad = slice.length;
 
     slice.forEach((image) => {
@@ -229,7 +239,6 @@
       img.src = image.post_link;
       img.alt = image.title;
       img.loading = "lazy";
-      img.dataset.fullSrc = image.post_link;
       img.classList.add("blurred");
 
       const highResImg = new Image();
@@ -264,27 +273,21 @@
   }
 
   function filterGallery(category) {
-    const items = document.querySelectorAll(".gallery-item");
+    currentCategory = category;
+    currentIndex = 0;
+    allImagesLoaded = true;
+
     const buttons = document.querySelectorAll(".categories button");
     buttons.forEach((btn) => btn.classList.remove("active"));
 
-    items.forEach((item) => {
-      if (
-              category === "all" ||
-              item.getAttribute("data-categories").includes(category)
-      ) {
-        item.classList.remove("hidden");
-      } else {
-        item.classList.add("hidden");
-      }
-    });
+    const activeBtn = document.querySelector(
+            `.categories button[onclick="filterGallery('${category}')"]`
+    );
+    if (activeBtn) activeBtn.classList.add("active");
 
-    if (category !== "all") {
-      const activeBtn = document.querySelector(
-              `.categories button[onclick="filterGallery('${category}')"]`
-      );
-      if (activeBtn) activeBtn.classList.add("active");
-    }
+    const gallery = document.getElementById("gallery");
+    gallery.innerHTML = "";
+    renderImages();
   }
 
   const animatedObserver = new IntersectionObserver(
@@ -292,8 +295,6 @@
             entries.forEach((entry) => {
               if (entry.isIntersecting) {
                 entry.target.classList.add("show");
-              } else {
-                entry.target.classList.remove("show");
               }
             });
           },
@@ -304,7 +305,6 @@
           (entries) => {
             if (
                     entries[0].isIntersecting &&
-                    currentIndex < galleryData.length &&
                     allImagesLoaded
             ) {
               renderImages();
@@ -331,19 +331,8 @@
               });
             });
             titleObserver.observe(document.getElementById("artist-title"));
-
-            document.querySelectorAll(".categories button").forEach((button) => {
-              button.addEventListener("click", (e) => e.stopPropagation());
-            });
           })
           .catch((error) => console.error("Error fetching metadata:", error));
-
-  document.addEventListener("click", (e) => {
-    const categories = document.querySelector(".categories");
-    if (!categories.contains(e.target)) {
-      filterGallery("all");
-    }
-  });
 </script>
 </body>
 </html>
