--- a/video.html
+++ b/video.html
@@ -116,8 +116,8 @@
     </div>
     <a href="#exhibition">Exhibition</a>
     <a href="#statement">Statement</a>
-    <a href="#cv">CV</a>
-    <a href="#contact">Contact</a>
+    <a href="./cv.html">CV</a>
+    <a href="./contact.html">Contact</a>
 </div>
 
 <div class="video-container">
