--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
     form input::placeholder,
     form textarea::placeholder {
       color: #aaa;
-      font-style: italic;
+      font-style: normal;
     }
 
     form input:focus,
